courses/430_programming-languages/assignment-8/tests/error/error43.correct
expected 'identifier', no token found
